--- a/public/index.css
+++ b/public/index.css
@@ -37,8 +37,10 @@ body {
 }
 
 .mockups iframe {
+   /* height: 846px;
+    width: 400px;*/
     height: 846px;
-    width: 400px;
+    width: 560px;
     border-radius: 10px;
     box-shadow: 0 0 50px 0px rgba(30, 0, 60, 0.3);
 }
